--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="https://ehsanul26.github.io/exam5/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="https://ehsanul26.github.io/exam5/CSS/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -114,8 +114,8 @@
 		</div>
 	</footer>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="Scripts/jquery-2.1.4.min.js"></script>
-  <script src="Scripts/bootstrap.min.js"></script>
-  <script src="Scripts/script.js"></script>
+  <script src="https://ehsanul26.github.io/exam5/Scripts/jquery-2.1.4.min.js"></script>
+  <script src="https://ehsanul26.github.io/exam5/Scripts/bootstrap.min.js"></script>
+  <script src="https://ehsanul26.github.io/exam5/Scripts/script.js"></script>
 </body>
 </html>
