--- a/menu-categories.html
+++ b/menu-categories.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://ehsanul26.github.io/exam5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://ehsanul26.github.io/exam5/css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -15,14 +15,14 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
+          <a href="https://ehsanul26.github.io/exam5/index.html" class="pull-left visible-md visible-lg">
             <div id="logo-img"></div>
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="https://ehsanul26.github.io/exam5/index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <img src="https://ehsanul26.github.io/exam5/images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>
           </div>
@@ -42,7 +42,7 @@
                 <span class="glyphicon glyphicon-home"></span> Home</a>
             </li>
             <li class="active">
-              <a href="menu-categories.html">
+              <a href="https://ehsanul26.github.io/exam5/menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
             <li>
